--- a/main.yml
+++ b/main.yml
@@ -1,7 +1,7 @@
         
 - hosts: all
   become: true
-  become_user: ansible
+  become_user: ec2-user
   gather_facts: false
   tasks:
     - include_role:
