--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -1,17 +1,9 @@
 ---
-- name: check
-  hosts: all
-  become: true
-  gather_facts: false
-  tasks:
-      - name: print a message
-       command: java -version 2>&1 | grep version | awk '{print $3}' | sed 's/"//g'
-       register: version
-       ignore_errors: True		
-      - name: print java version
-       debug:
-       msg: " {{ version i}} "
-       when: " version.rc == 0 "
+- name: Check if java is installed
+        command: java -version
+        become_user: root
+        register: java_result
+        ignore_errors: True
 - name: Install Java 1.7
   yum: name=java-1.7.0-openjdk state=present
 
