--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+     
 - name: add group "tomcat"
   group: name={{tomcat_group}}
 
@@ -7,8 +8,14 @@
   become: True
   become_method: sudo
 
-- name: Download Tomcat
+- name: Check and Download Tomcat
+  stat:
+     path: /usr/share/tomcat/bin
+  register: result
   get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.61/bin/apache-tomcat-7.0.61.tar.gz dest=/opt/apache-tomcat-7.0.61.tar.gz
+  when: not result.stat.exists
+
+ 
 
 - name: Extract archive
   command: chdir=/usr/share /bin/tar xvf /opt/apache-tomcat-7.0.61.tar.gz -C /opt/ creates=/opt/apache-tomcat-7.0.61
