--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
-     
+- name: Find my public ip
+  uri:
+    url: http://ifconfig.me/ip
+    return_content: yes
+  register: ip_response
+    
 - name: add group "tomcat"
   group: name={{tomcat_group}}
 
@@ -31,7 +36,7 @@
   template: src=server.xml dest=/usr/share/tomcat/conf/
 - name: check if URL is reachable from this host
   ansible.builtin.uri:
-     url: "http://3.111.169.111:8080/"
+     url: "ip_response.content:8080/"
   register: _result
   ignore_errors: yes
 
