--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,28 @@
             <version>5.1.30</version>
         </dependency>
   </dependencies>
+  
+  <distributionManagement>
+	
+	    <repository>
+	      <id>nexus</id>
+	      <name>Sujata Nexus Repository</name>
+	      <url><distributionManagement>
+	
+	    <repository>
+	      <id>nexus</id>
+	      <name>Release Nexus Repository</name>
+	      <url>http://13.232.81.82:8081/repository/maven-releases/</url>
+	    </repository>
+	    
+	    <snapshotRepository>
+	      <id>nexus</id>
+	      <name>Snapshot Nexus Repository </name>
+	      <url>http://13.232.81.82:8081/repository/maven-snapshots/</url>
+	    </snapshotRepository>
+	    
+	</distributionManagement>
+  
   <build>
   <pluginManagement>
    <plugins>
