--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
               </goals>
               <phase>validate</phase>
               <configuration>
-                <newVersion>0.0.0:${env.VERSION}</newVersion>
+                <newVersion>0.0.0</newVersion>
               </configuration>
             </execution>
           </executions>
