--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.ltidevops</groupId>
   <artifactId>LoginWebApp</artifactId>
   <packaging>war</packaging>
-  <version>${env.BUILD_NUMBER}</version>
+  <version>1.</version>
   <name>LoginWebApp Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -74,5 +74,90 @@
             <url>https://jcenter.bintray.com</url>
         </repository>
     </repositories>
+<profiles>
+  <profile>
+    <id>bump-patch</id>
+    <activation>
+      <property>
+        <name>bumpPatch</name>
+      </property>
+    </activation>
+    <build>
+      <plugins>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>versions-maven-plugin</artifactId>
 
+          <executions>
+            <execution>
+              <goals>
+                <goal>set</goal>
+              </goals>
+              <phase>validate</phase>
+              <configuration>
+                <newVersion>${env.BUILD_NUMBER}</newVersion>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </build>
+  </profile>
+  <profile>
+    <id>bump-minor</id>
+    <activation>
+      <property>
+        <name>bumpMinor</name>
+      </property>
+    </activation>
+    <build>
+      <plugins>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>versions-maven-plugin</artifactId>
+
+          <executions>
+            <execution>
+              <goals>
+                <goal>set</goal>
+              </goals>
+              <phase>validate</phase>
+              <configuration>
+                <newVersion>1.0.0</newVersion>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </build>
+  </profile>
+  <profile>
+    <id>bump-major</id>
+    <activation>
+      <property>
+        <name>bumpMajor</name>
+      </property>
+    </activation>
+    <build>
+      <plugins>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>versions-maven-plugin</artifactId>
+
+          <executions>
+            <execution>
+              <goals>
+                <goal>set</goal>
+              </goals>
+              <phase>validate</phase>
+              <configuration>
+                <newVersion>1.0.0</newVersion>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </build>
+  </profile>
+</profiles>
 </project>
