--- a/main.yml
+++ b/main.yml
@@ -15,4 +15,8 @@
   tasks:
     - include_role:
         name: tomcat
+        env: 
+          JENKINS_BUILD_NUMBER="{{BUILD_NUMBER}}"
+ 
+  
       
