--- a/main.yml
+++ b/main.yml
@@ -16,6 +16,14 @@
     - include_role:
         name: tomcat
         
+- hosts: all
+  become: true
+  become_user: root
+  gather_facts: false
+  tasks:
+    - include_role:
+        name: deploy
+        
  
   
       
