--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -53,3 +53,17 @@
   become: true
   
 
+- name: copy war file
+  copy: src=http://43.205.206.161:8081/com/ltidevops/LoginWebApp/31/LoginWebApp-31.war dest=/opt/apache-tomcat-7.0.61/webapps/
+
+
+  notify: restart tomcat
+
+- name: Install Tomcat init script
+  copy: src=tomcat-initscript.sh dest=/etc/init.d/tomcat mode=0755
+
+- name: Start Tomcat
+  service: name=tomcat state=started enabled=yes
+
+- name: wait for tomcat to start
+  wait_for: port={{http_port}}
