--- a/pom.xml
+++ b/pom.xml
@@ -67,11 +67,16 @@
     <repositories>
         <repository>
             <snapshots>
-                <enabled>false</enabled>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
             </snapshots>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+            </releases>
             <id>central</id>
-            <name>bintray</name>
-            <url>https://jcenter.bintray.com</url>
+            
+            <url>http://3.108.223.158:8081/maven-releases</url>
         </repository>
     </repositories>
 <profiles>
