--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
                 <enabled>true</enabled>
                 <updatePolicy>daily</updatePolicy>
             </releases>
-            <id>central</id>
+            <id>Nexus</id>
             
             <url>http://3.108.223.158:8081/maven-releases</url>
         </repository>
