--- a/pom.xml
+++ b/pom.xml
@@ -74,9 +74,9 @@
                 <enabled>true</enabled>
                 <updatePolicy>daily</updatePolicy>
             </releases>
-            <id>nexus</id>
+            <id>Nexus</id>
             
-            <url>http://3.108.223.158:8081/maven-releases</url>
+            <url>http://3.108.223.158:8081/</url>
         </repository>
     </repositories>
 <profiles>
