--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,16 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>versions-maven-plugin</artifactId>
+    <metadata modelVersion="1.1.0">
+  <groupId>org.codehaus.mojo</groupId>
+  <plugins>
+    <plugin>
+      <name>Maven Wagon plugin</name>
+      <prefix>wagon</prefix>
+      <artifactId>wagon-maven-plugin</artifactId>
+    </plugin>
+  </plugins>
+</metadata>      
 
           <executions>
             <execution>
