--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.ltidevops</groupId>
   <artifactId>LoginWebApp</artifactId>
   <packaging>war</packaging>
-  <version>1</version>
+  <version>${env.BUILD_NUMBER}</version>
   <name>LoginWebApp Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -23,12 +23,12 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>SujataReleases Nexus Repository</name>
-	      <url>http://13.233.128.51:8081/repository/MyLoginApp/</url>
+	      <url>http://13.233.128.51:8081/repository/maven-releases/</url>
 	    </repository> 
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>SujataSnapshot Nexus Repository </name>
-	      <url>http://13.233.128.51:8081/repository/MyLoginApp/</url>
+	      <url>http://13.233.128.51:8081/repository/maven-snapshots/</url>
 	    </snapshotRepository>       
   </distributionManagement>
   
